[metadata]
name = python_flask_prometheus_poc
version = 1.0.0
author = Nico Coetzee
author_email = nicc777@gmail.com
description = Example python flask application and dummy load generator to test prometheus metrics from flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/python_flask_prometheus_poc
project_urls =
    Bug Tracker = https://github.com/nicc777/python_flask_prometheus_poc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    flask
    prometheus-flask-exporter

[options.packages.find]
where = src